src/main/kotlin/com/example/error/EntityNotFoundException.kt
package com.example.error

class EntityNotFoundException(msg: String) : Exception(msg) {
    constructor() : this("Entity not found!")
}